--- a/templates/index.html
+++ b/templates/index.html
@@ -142,7 +142,7 @@
         
                 <!-- Right Navbar Links -->
                 <div class="order-1 order-md-3 navbar-nav navbar-no-expand ml-auto">
-                    <a href="/homies/login" class="btn btn-primary text-nowrap">
+                    <a href="/homies/login" class="btn btn-outline-primary text-nowrap">
                         <span>Log in</span>
                         <i class="fas fa-sign-in-alt ml-1"></i>
                     </a>
