--- a/templates/mainBase.html
+++ b/templates/mainBase.html
@@ -95,7 +95,7 @@
 
                  <!-- Home -->
                  <li class="nav-item">
-                    <a class="nav-link text-primary" href="./index.html" role="button">
+                    <a class="nav-link text-primary" href="/homies/main" role="button">
                         <i class="fas fa-home"></i>
                         <span class="d-inline-block d-md-none ml-1 ml-md-0">Home</span>
                     </a>
@@ -168,7 +168,7 @@
 
                 <!-- System Administration -->
                 <li class="nav-item">
-                    <a class="nav-link" href="#" role="button">
+                    <a class="nav-link" href="/homies/systemAdmin" role="button">
                         <span>SysAdmin</span>
                     </a>
                 </li>
