--- a/templates/systemAdminMain.html
+++ b/templates/systemAdminMain.html
@@ -1,5 +1,5 @@
 <!-- Apply layout from base.html -->
-{%extends '/mainBase.html'%} 
+{%extends '/systemAdminBase.html'%} 
 
 
 <!-- Enter content for block 'content' -->
