--- a/templates/warehousing/admin/content/warehouses.html
+++ b/templates/warehousing/admin/content/warehouses.html
@@ -27,10 +27,10 @@
             </div>
             <div class="row">     
                 <!-- Button -->
-                <div class="col-sm-6">
-                    <a href="#" class="btn btn-success" data-toggle="modal" data-target="#adding_modal">Add New Warehouse</a>
+                <!-- <div class="col-sm-6">
+                    <a href="#" class="btn btn-success" data-toggle="modal" data-target="#adding_modal">Add New Warehouse</a> -->
                     <!-- <input type="submit" value="Create new Project" class="btn btn-success float-right"> -->
-                </div>
+                <!-- </div> -->
                 <!-- / Button -->
             </div>
         </div><!-- /.container-fluid -->
@@ -64,7 +64,17 @@
                     <div class="card card-primary card-outline">
                         <!-- Card Header -->
                         <div class="card-header">
-                            <h3 class="card-title">Warehouses</h3>
+                            <div class="row"> 
+                                <div class="col-md-6">
+                                    <h3 class="card-title">Warehouses</h3>
+                                </div>
+                                <!-- Button -->
+                                <div class="col-md-6">
+                                    <button class="btn btn-sm btn-primary float-right" data-toggle="modal" data-target="#adding_modal">Add New Warehouse <i class="fas fa-plus"></i></button>
+                                    <!-- <input type="submit" value="Create new Project" class="btn btn-success float-right"> -->
+                                </div>
+                                <!-- / Button -->
+                            </div>
                         </div>
                         <!-- /.card-header -->
 
