--- a/templates/warehousing/manager/default/base.html
+++ b/templates/warehousing/manager/default/base.html
@@ -367,14 +367,14 @@
                             <p> Return </p>
                         </a>
                     </li>
-                    <li class="nav-header"><b>Reports In/Out</b></li>
-                    <li class="nav-item">
+                    <li class="nav-header"><b>Reports</b></li>
+                    <!-- <li class="nav-item">
                         <a href="/warehousing/manager/outbound_reports"  class="nav-link" id="outbound_report_sidebar">
                             <script>if(window.location.pathname == '/warehousing/manager/outbound_reports/'){document.getElementById("outbound_report_sidebar").classList.add('active')}</script>
                             <i class="nav-icon fas fa-poll"></i>
                             <p> Outbound Reports </p>
                         </a>
-                    </li>
+                    </li> -->
                     <li class="nav-item">
                         <a href="/warehousing/manager/inbound_reports" class="nav-link" id="inbound_report_sidebar">
                             <script>if(window.location.pathname == '/warehousing/manager/inbound_reports/'){document.getElementById("inbound_report_sidebar").classList.add('active')}</script>
@@ -409,8 +409,8 @@
 
         <!-- Sidebar Custom -->
         <div class="sidebar-custom">
-            <!-- <a href="#" class="btn btn-link"><i class="fas fa-cogs"></i></a>
-            <button class="btn btn-danger hide-on-collapse pos-right" onClick="return logout()">Logout</button> -->
+            <!-- <a href="#" class="btn btn-link"><i class="fas fa-cogs"></i></a>  -->
+            <button class="btn btn-danger hide-on-collapse pos-right" onClick="return logout()">Log out</button>
         </div>
         <!-- /.sidebar-custom -->
     </aside>
