--- a/templates/access/login.html
+++ b/templates/access/login.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <style>
+    .form-control.is-invalid
+        {
+            background-image: none;
+        }
+    </style>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title> Warehousing | Hospital Management System</title>
@@ -17,11 +23,6 @@
     <!-- Additional CSS -->
     <link rel="stylesheet" href="{{url_for('static', path='/plugins/toastr/toastr.css')}}">
     <link rel="stylesheet" href="{{url_for('static', path='/plugins/sweetalert2/sweetalert2.css')}}">
-<style>
-    
-   
-</style>
-
 </head>
 <body class="hold-transition login-page bg-white">
     <div class="login-box">
