--- a/templates/main.html
+++ b/templates/main.html
@@ -120,7 +120,7 @@
         
                     <!-- System Administration -->
                     <li class="nav-item">
-                        <a class="nav-link" href="./sysadmin.html" role="button">
+                        <a class="nav-link" href="/homies/systemAdmin" role="button">
                             <span>SysAdmin</span>
                         </a>
                     </li>
