--- a/templates/warehousing/manager/content/request.html
+++ b/templates/warehousing/manager/content/request.html
@@ -94,8 +94,9 @@
                                         <th width="15%">Request Date</th>
                                         <th width="15%">Requestor</th>
                                         <th width="15%">Request Type</th>
-                                        <th width="10%">Status</th>
-                                        <th width="25%" class="text-center">Actions</th>
+                                        <th width="20%">Status</th>
+                                        <!-- <th class="hide">Created Date</th> -->
+                                        <th width="15%" class="text-center">Actions</th>
                                     </tr>
                                 </thead>
                                 <tbody>
