--- a/templates/warehousing/manager/content/viewInboundReport.html
+++ b/templates/warehousing/manager/content/viewInboundReport.html
@@ -44,12 +44,12 @@
                                         
                                     </div>
                                 </div>
-                                <div class="col-md-3" id="edit_btn">
+                                <!-- <div class="col-md-3" id="edit_btn">
                                     <button class="btn btn-info float-right" data-toggle="modal" data-target="#editing_modal" onClick="return editData()">
                                         <i class="fas fa-edit"></i>
                                         Edit Status
                                     </button>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                         <!-- /.card-header -->
