--- a/templates/warehousing/manager/content/viewRequest.html
+++ b/templates/warehousing/manager/content/viewRequest.html
@@ -81,7 +81,7 @@
                                     <h3 class="card-title">Requested Supplies</h3>
                                 </div>
                                 <div class="col" id="add_supply_id">
-                                    <button class="btn btn-primary float-right" data-toggle="modal" data-target="#adding_modal" onclick="return addSupply()">Add Supply Request</button>
+                                    
                                 </div>
                             </div>
                         </div>
@@ -221,6 +221,52 @@
         </div><!-- /.modal -->
     </div>
     <!-- END editing Request Modal -->
+
+    <!-- Editing Request Supply Modal -->
+    <div class="modal fade" id="editing_supply_modal">
+        <div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Edit Supply Form</h4>
+                    <button type="button" class="btn btn-sm btn-default" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true"><i class="fas fa-times"></i></span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <!-- CONTENT -->
+                    <form id="form_id" name="e_supply_form_id" enctype="multipart/form_data">
+                        <div class="card-body">
+                            <input type="hidden" id="e_uuid" name="e_uuid" value="">
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <label for="e_supply_id">Supply</label>
+                                        <select class="form-control js-example-basic-single" id="e_supply_id" name="e_supply_id">
+                                        </select>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <label for="e_quantity" id="quantityLabel">Quantity</label>
+                                        <input type="number" class="form-control" id="e_quantity" placeholder="Enter Quantity" required>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- BUTTONS -->
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                <button type="Submit" class="btn btn-primary" id="button_add">Submit</button>
+                            </div>
+                            <!-- END BUTTONS -->
+                        </div>
+                    </form> <!-- END CONTENT -->
+                </div><!-- /.modal-content -->
+            </div><!-- /.modal-dialog -->
+        </div><!-- /.modal -->
+    </div>
+    <!-- END Editing Request Supply Modal -->
 {%endblock%}
 
 {%block scripts%}
