--- a/templates/warehousing/manager/default/base.html
+++ b/templates/warehousing/manager/default/base.html
@@ -507,6 +507,26 @@
 <script src="{{url_for('static', path='/dist/js/warehousing/access/logout.js')}}"></script>
 
 
+<!-- ChartJS -->
+<script src="{{url_for('static', path='/plugins/chart.js/Chart.min.js')}}"></script>
+<!-- Sparkline -->
+<script src="{{url_for('static', path='/plugins/sparklines/sparkline.js')}}"></script>
+<!-- JQVMap -->
+<script src="{{url_for('static', path='/plugins/jqvmap/jquery.vmap.min.js')}}"></script>
+<script src="{{url_for('static', path='/plugins/jqvmap/maps/jquery.vmap.usa.js')}}"></script>
+<!-- jQuery Knob Chart -->
+<script src="{{url_for('static', path='/plugins/jquery-knob/jquery.knob.min.js')}}"></script>
+<!-- daterangepicker -->
+<script src="{{url_for('static', path='/plugins/moment/moment.min.js')}}"></script>
+<script src="{{url_for('static', path='/plugins/daterangepicker/daterangepicker.js')}}"></script>
+<!-- Tempusdominus Bootstrap 4 -->
+<script src="{{url_for('static', path='/plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js')}}"></script>
+<!-- Summernote -->
+<script src="{{url_for('static', path='/plugins/summernote/summernote-bs4.min.js')}}"></script>
+
+
+
+
 <!-- <script src="{{url_for('static', path='/dist/js/warehousing/manager/baseManager.js')}}"></script> -->
 
 
